<?xml version="1.0"?>
<package>
  <name>fgs_ceres_playground</name>
  <version>0.0.0</version>
  <description>The fgs_ceres_playground package</description>
  <maintainer email="fugashy@icloud.com">fugashy</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/fugashy</url>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>fgs_opt_data_storage</build_depend>
  <run_depend>fgs_opt_data_storage</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
