<?xml version="1.0"?>
<package>
  <name>fgs_g2o_playground</name>
  <version>0.0.0</version>
  <description>The fgs_g2o_playground package</description>
  <maintainer email="fugashy@icloud.com">fugashy</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>fgs_opt_data_stroage</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>fgs_opt_data_stroage</run_depend>
  <run_depend>roscpp</run_depend>

</package>
