<?xml version="1.0"?>
<package>
  <name>fgs_opt_from_scratch</name>
  <version>0.0.0</version>
  <description>The fgs_opt_from_scratch package</description>

  <maintainer email="fugashy@icloud.com">fugashy</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/fugashy</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>fgs_opt_data_storage</build_depend>
  <run_depend>fgs_opt_data_storage</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
