<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>fgs_opt_from_scratch</name>
  <version>2.0.0</version>
  <description>The fgs_opt_from_scratch package</description>

  <author>fugashy</author>
  <author email="fugashy@icloud.com">fugashy</author>
  <maintainer email="fugashy@icloud.com">fugashy</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/fugashy</url>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>fgs_opt_data_storage</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
